# Taiwan-stock-market-auto-analyse

./: .env.example  .gitignore  AGENT_HANDOFF.md  CLAUDE.md  analyzer.py  auto_trader.py  backtest.py  check_dpc.py  collector.py  daily_price_cache.py  daily_reporter.py  data_integrity_audit.py  desktop_backend.py  disposition_filter.py  fetch_prices.py  font_sizes.txt  formal_simulation.py  header.txt  header2.txt  historical_data.py  index.html  institutional_flow_cache.py  institutional_flow_provider.py  international_news.py  launch_silent.vbs  main.py  market_calendar.py  market_numbers.txt  market_universe.py  models.py  multi_analyst.py  notifier.py  package-lock.json  package.json  panel_def.txt  param_sweep.py  patch_dashboard.py  requirements.txt  retail_flow_strategy.py  risk_manager.py  (+59 more)
AGENT.md/: AGENT.md.txt
SKILL/: token-reduction-guide.md
backtest_results/: strong_stocks_intraday.json  strong_stocks_intraday.md
data/: daily_price_cache.json  flow_cache.json  full_sector_map.json  sector_map.json
docs/: daily_live_ops_checklist.md  daily_live_ops_sop.md
quote_runtime/: __init__.py  detail_broadcaster.py  native_buffers.py  subscription_manager.py  universe_loader.py
scripts/: build_sector_rotation_signals.py  create_ops_desktop_shortcuts.ps1  install_daily_flow_refresh_task.ps1  install_daily_smoke_task.ps1  install_daily_start_task.ps1  package_desktop.ps1  refresh_institutional_flow_cache.py  release_desktop.ps1  render_strong_stocks_leaderboard.py  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backend.rs  main.rs  updater.rs
(+128 files in other folders)
